# sine_gordon

./: .gitignore  README.md  pyproject.toml
sine_gordon/: __init__.py  solutions.py
tests/: test_solutions.py
