[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sine-gordon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["sine_gordon"]
